--- a/environment.yml
+++ b/environment.yml
@@ -8,7 +8,7 @@ channels:
 dependencies:
   - python=3.9
   - aahendriksen::msd_pytorch=0.10.1
-  - cudatoolkit=11.1=ha002fc5_10
+  - cudatoolkit=11.1
   - imageio
   - numpy
   - pip
